# algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: compiler-warnings.cmake  googletest-download.cmake  googletest.cmake  version.hpp.in
include/: search  sort  sorter  utils
include/searching/: binary_search.hpp  exponential_search.hpp  jump_search.hpp  linear_search.hpp  random_search.hpp  ternary_search.hpp
include/sorters/: binary_insertion_sorter.hpp  bubble_sorter.hpp  bucket_sorter.hpp  comb_sorter.hpp  counting_sorter.hpp  gnome_sorter.hpp  heap_sorter.hpp  insertion_sorter.hpp  intro_sorter.hpp  merge_sorter.hpp  patience_sorter.hpp  quick_sorter.hpp  radix_sorter.hpp  selection_sorter.hpp  shaker_sorter.hpp  shell_sorter.hpp  smooth_sorter.hpp  sorter_adapter.hpp  sorter_policy.hpp  stooge_sorter.hpp  tim_sorter.hpp  tree_sorter.hpp
include/sorting/: binary_insertion_sort.hpp  bubble_sort.hpp  bucket_sort.hpp  comb_sort.hpp  counting_sort.hpp  gnome_sort.hpp  heap_sort.hpp  insertion_sort.hpp  intro_sort.hpp  median_three.hpp  merge_sort_buffered.hpp  optimized_bubble_sort.hpp  patience_sort.hpp  quick_sort.hpp  radix_sort.hpp  selection_sort.hpp  shaker_sort.hpp  shell_sort.hpp  smooth_sort.hpp  stooge_sort.hpp  tim_sort.hpp  tree_sort.hpp
include/utility/: traits.hpp  utility.hpp
test/: CMakeLists.txt
test/include/: tools.hpp
test/src/: test_search.cpp  test_sort.cpp  test_stable_sort.cpp  test_utils.cpp
